[package]
name = "ln-gossip-sim"
version = "0.0.0"
edition = "2024"

[dependencies]
lightning = "0.2.2"
lightning-net-tokio = "0.2.0"
hex = "0.4.3"
bitcoin = { version = "0.32.8", features = ["rand-std"] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "time", "signal", "net", "io-util"] }
clap = { version = "4", features = ["derive"] }
chrono = "0.4.44"
corepc-client = { version = "0.12.0", features = ["client-sync"] }
serde_json = "1.0.149"
thiserror = "2.0.18"

[[bin]]
name = "ln-gossip-simd"
path = "src/bin/simd.rs"

[[bin]]
name = "ln-gossip-sim-cli"
path = "src/bin/cli.rs"

[lib]
name = "ln_gossip_sim"
path = "src/lib.rs"
