[workspace]
members = ["bolt", "noise", "ln-gossip-sim"]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

[workspace.lints.rust]
warnings = "deny"

[workspace.dependencies]
bitcoin = { version = "0.32.8", features = ["rand-std"] }
hex = "0.4.3"
thiserror = "2.0.18"
chacha20poly1305 = "0.10"
hkdf = "0.13.0"
sha2 = "0.11.0"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "time", "signal", "net", "io-util", "sync"] }
clap = { version = "4", features = ["derive"] }
corepc-client = { version = "0.12.0", features = ["client-sync"] }
serde_json = "1.0.149"
log = "0.4"
env_logger = "0.11"

# Internal crates
bolt = { path = "bolt" }
noise = { path = "noise" }
