[package]
name = "noise"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
bitcoin = { workspace = true }
chacha20poly1305 = { workspace = true }
hkdf = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
